--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles/styles.css">
 
   <script src="./scripts/main.js" type="modules"></script>
@@ -15,37 +18,123 @@
 </head>
 
 <body>
+  <header>
+    <img class="logo" src="./assets/logo.svg" alt="logo" />
+    <a class="consultation-btn consultation-btn-primary" href="#">Free Consultation</a>
+  </header>
+  <main>
 
-  Free Consultation
+    <section class="business-intro">
+      <h1>Design solutions made easy</h1>
+      <p>With over ten years of experience in various design disciplines, I’m your one-stop shop for your design needs.
+      </p>
+    </section>
 
-  Design solutions made easy
+    <section class="services-grid">
+      <div class="services-grid-container">
+        <div class="card card-xl graphic-design">
+          <div class="card-img">
+            <img src="./assets/pattern-graphic-design.svg" alt="graphic design" />
+          </div>
+          <div class="card-heading">
+            <h2>Graphic Design</h2>
+          </div>
+        </div>
 
-  With over ten years of experience in various design disciplines, I’m your one-stop shop for your design needs.
+        <div class="card card-sm ui-ux">
+          <div class="card-img">
+            <img src="./assets/pattern-ui-ux.svg" alt="ui-ux" />
+          </div>
+          <div class="card-heading">
+            <h2>UI/UX</h2>
+          </div>
+        </div>
 
-  Graphic Design
-  UI/UX
-  Apps
-  Photography
-  Illustrations
-  Motion Graphics
+        <div class="card card-sm apps">
+          <div class="card-img">
+            <img src="./assets/pattern-apps.svg" alt="apps" />
+          </div>
+          <div class="card-heading">
+            <h2>Apps</h2>
+          </div>
+        </div>
 
-  I’m Amy, and I’d love to work on your next project
+        <div class="card card-md illustrations">
+          <div class="card-img">
+            <img src="./assets/pattern-illustrations.svg" alt="illustrations" />
+          </div>
+          <div class="card-heading">
+            <h2>Illustrations</h2>
+          </div>
+        </div>
 
-  I love working with others to create beautiful design solutions. I’ve designed everything from brand illustrations
-  to complete mobile apps. I’m also handy with a camera!
+        <div class="card card-lg photography">
+          <div class="card-img">
+            <img src="./assets/pattern-photography.svg" alt="photography" />
+          </div>
+          <div class="card-heading">
+            <h2>Photography</h2>
+          </div>
+        </div>
 
-  Free Consultation
+        <div class="card card-lg motion-graphics">
+          <div class="card-img">
+            <img src="./assets/pattern-motion-graphics.svg" alt="motion-graphics" />
+          </div>
+          <div class="card-heading">
+            <h2>Motion Graphics</h2>
+          </div>
+        </div>
 
-  My Work
+      </div>
 
-  Book a call with me
+    </section>
 
-  I’d love to have a chat to see how I can help you. The best first step is for us to discuss your project during a
-  free consultation. Then we can move forward from there.
+    <section class="intro">
+      <img src="./assets/image-amy.webp" alt="picture of Amy" />
+      <div class="intro-content">
+        <h2>I’m Amy, and I’d love to work on your next project</h2>
 
-  Free Consultation
+        <p>
+          I love working with others to create beautiful design solutions. I’ve designed everything from brand
+          illustrations
+          to complete mobile apps. I’m also handy with a camera!
+        </p>
 
-  Free Consultation
+        <a class="consultation-btn consultation-btn-secondary" href="#">Free Consultation</a>
+      </div>
+    </section>
+
+    <section class="my-work">
+      <h2>My Work</h2>
+      <img src="./assets/image-slide-1.jpg" alt="img-1" />
+      <div class="mywork-controls">
+        <button><img src="./assets/icon-arrow-left.svg" alt="left arrow" /></button>
+        <button><img src="./assets/icon-arrow-right.svg" alt="right arrow" /></button>
+      </div>
+    </section>
+
+    <aside class="book-appointment">
+      <div class="book-appointment-content">
+        <h2>Book a call with me</h2>
+
+        <p>
+          I’d love to have a chat to see how I can help you. The best first step is for us to discuss your project
+          during
+          a
+          free consultation. Then we can move forward from there.
+        </p>
+
+        <a href="#" class="consultation-btn consultation-btn-secondary">Free Consultation</a>
+      </div>
+    </aside>
+
+  </main>
+  <footer>
+    <img src="./assets/logo.svg" alt="logo">
+    <a href="#" class="consultation-btn consultation-btn-primary">Free Consultation</a>
+  </footer>
+
 
 </body>
 
