Updated for responsiveness. Removed the image slider as a solution is required that fits multiple screensizes

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="./styles/styles.css">
 
-  <script src="./scripts/main.js" type="modules"></script>
+  <script src="./scripts/main.js" type="module"></script>
 
   <title>Frontend Mentor | Single-page design portfolio</title>
 </head>
@@ -107,11 +108,7 @@
 
     <section class="my-work">
       <h2>My Work</h2>
-      <img src="./assets/image-slide-1.jpg" alt="img-1" />
-      <div class="mywork-controls">
-        <button><img src="./assets/icon-arrow-left.svg" alt="left arrow" /></button>
-        <button><img src="./assets/icon-arrow-right.svg" alt="right arrow" /></button>
-      </div>
+
     </section>
 
     <aside class="book-appointment">
